--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -4,6 +4,10 @@
   <strong>Number:</strong>
   <%= @train.number %>
 </p>
+<p>
+  <strong>Станция:</strong>
+  
+</p>
 
 <%= link_to 'Edit', edit_train_path(@train) %> |
 <%= link_to 'Back', trains_path %>
