--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome#index</h1>
 <p><%= link_to 'Станции', railway_stations_path %></p>
 <p><%= link_to 'Поезда', trains_path %></p>
+<p><%= link_to 'Маршруты', routes_path %></p>
