--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :number %><br>
     <%= f.text_field :number %>
   </div>
+  <div class="field">
+    <%= f.label :route, "Маршрут" %><br>
+    <%= f.collection_select :route_id, Route.all, :id, :title %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
