--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -5,8 +5,12 @@
   <%= @train.number %>
 </p>
 <p>
-  <strong>Станция:</strong>
-  
+  <strong>Маршрут:</strong>
+  <% if @train.route.present? %>
+  <%= link_to @train.route.title, @train.route %>
+  <% else %>
+    Маршрут не назначен
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_train_path(@train) %> |
