--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,4 @@
 <p><%= link_to 'Поезда', trains_path %></p>
 <p><%= link_to 'Вагоны', coaches_path %></p>
 <p><%= link_to 'Маршруты', routes_path %></p>
+<p><%= link_to 'Касса', tickets_path %></p>
